[tool.poetry]
name = "video-concat"
version = "1.0.0"
description = ""
authors = ["Dawson Booth <github@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/video-concat"
repository = "https://github.com/dawsonbooth/video-concat"
keywords = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
ffmpeg-python = "^0.2.0"
pillow = "^7.2.0"
pymupdf = "^1.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
autopep8 = "^1.5"
pylint = "^2.4.4"
pyinstaller = "^3.6"
rope = "^0.17.0"

macholib = { version = "^1.8", markers = "sys_platform == 'darwin'" }
pefile = { version = "^2017.8.1", markers = "sys_platform == 'win32'" }
pywin32-ctypes = { version = "^0.2.0", markers = "sys_platform == 'win32'" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
