[tool.poetry]
name = "joi-video"
version = "1.0.0"
description = ""
authors = ["Dawson Booth <github@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/joi-video"
repository = "https://github.com/dawsonbooth/joi-video"
keywords = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

packages = [
    { include = "joi_video" },
]

[tool.poetry.scripts]
joi-video = 'joi_video.__main__:main'

[tool.poetry.dependencies]
python = "^3.6"
ffmpeg-python = "^0.2.0"
Pillow = "^8.1.0"
PyMuPDF = "^1.18.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
rope = "^0.17.0"
invoke = "^1.4.1"
pyclean = "^2.0.0"
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
